# clash-rs

./: Cargo.toml  config.yaml
src/: config.rs  main.rs
src/proxy/: direct.rs  fake.rs  http.rs  mod.rs  outbound.rs  proxy_group.rs  proxy_manager.rs  runtime.rs  socks5.rs  trojan.rs  vmess.rs  ws_wrapper.rs
