[package]
name = "clash-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
log = "0.4"
env_logger = "0.10"
tokio = { version = "1", features = ["full"]}
bytes = "1.5"
async-trait = "0.1"
hyper = { version = "0.14", features = ["full"] }
uuid = { version = "1", features = ["v4"] }
url = "2"
urlencoding = "2"