[package]
name = "clash-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
log = "0.4"
env_logger = "0.10"
tokio = { version = "1", features = ["full"]}
bytes = "1.5"
async-trait = "0.1"
hyper = { version = "0.14", features = ["full"] }
uuid = { version = "1", features = ["v4"] }
url = "2"
urlencoding = "2"
aes-gcm = "0.10"
aes = "0.8"
rand = "0.8"
sha2 = "0.10"
chrono = "0.4"
tokio-tungstenite = "0.20"
tungstenite = { version = "0.20", features = ["handshake"] }
http = "0.2"
tokio-util = { version = "0.7", features = ["compat"] }
futures-util = "0.3"
futures = "0.3"
md-5 = "0.10"
hex = "0.4"
rustls = "0.21"
tokio-rustls = "0.24"
webpki-roots = "0.25"